--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,8 @@
     <string name="rating">Rating</string>
     <string name="in_stock">In stock</string>
     <string name="not_in_stock">Not in stock</string>
+    <string name="error_failed_to_download_product">Failed to get products.. try again later</string>
+
+
 
 </resources>
